cotizador de seguros funcionando

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <title>Cotizador de Seguro Automotor</title>
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container-fluid">
-        <div class="title">
+        <div class="title text-center m-5">
             <h1>Cotizador de Seguro Automotor</h1>
         </div>
         <form action="" id="form">
@@ -55,7 +55,7 @@
             </div>
             <div class="input-group mb-3" id="precio-vehiculo">
                 <label class="input-group-text" for="inputGroupSelect01">Ingrese el precio de su vehículo</label>
-                <input type="text">
+                <input type="number">
             </div>
             <div class="input-group mb-3" id="cochera">
                 <label class="input-group-text"             for="inputGroupSelect01">Indique si posee o no cochera</label>
@@ -66,6 +66,10 @@
             </div>
             <input class="btn btn-outline-primary" type="submit" value="Submit">
         </form>
+        <footer class="container-fluid mt-5 p-5">
+            <h3 class="text-center">Javascript comisión 39470</h3>
+            <h3 class="text-center">Alumno: Ivanna García</h3>
+        </footer>
     </div>
 </body>
 </html>
