se agregaron detalles css

--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
             </div>
             <input class="btn btn-outline-primary" type="submit" value="Submit">
         </form>
-        <footer class="container-fluid mt-5 p-5">
-            <h3 class="text-center">Javascript comisión 39470</h3>
-            <h3 class="text-center">Alumno: Ivanna García</h3>
-        </footer>
     </div>
+    <footer class="container-fluid mt-5 p-5">
+        <h4 class="text-center p-3">Javascript comisión 39470</h4>
+        <img src="./multimedia/security-icon.png" alt="security" class="security_icon p-3">
+        <h4 class="text-center p-3">Alumno: Ivanna García</h4>
+    </footer>
 </body>
 </html>
